Fix card alignment
Cards are now aligned on the home page and it looks much better now.

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -29,6 +29,15 @@
 
 .card-pack {
   text-align: center;
+
+}
+
+.cards-main {
+  display: flex;
+
+  align-items: flex-start;
+}
+
 }
 
 .card-info {
